--- a/D-login.html
+++ b/D-login.html
@@ -1,11 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>大事件</title>
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
+    <link rel="stylesheet" href="/assets/css/login1.css">
+    <link rel="shortcut icon" href="/assets/images/bitbug_favicon.ico"> 
 </head>
+
 <body>
-    
+    <div class="layui-main">
+        <img src="/assets/images/logo.png" alt="">
+    </div>
+    <!-- 登录注册区域 -->
+    <div class="loginAndRegBox">
+        <div class="title-box"></div>
+        <!-- 登录盒子 -->
+        <div class="login_box">
+            <form class="layui-form" id="form_login">
+                <!-- 用户名输入框 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码输入框 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|psw" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 登录按钮 -->
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid  layui-btn-normal" lay-submit>登 录</button>
+                </div>
+                <!-- 注册按钮 -->
+                <div class="layui-form-item link">
+                    <a href="javascript:;" id="link_reg">去注册账户</a>
+                </div>
+            </form>
+        </div>
+        <img src="/assets/images/loading.gif" id="loading">
+        <!-- 注册盒子 -->
+        <div class="reg_box" id="form_reg">
+            <form class="layui-form" action="">
+                <!-- 用户名输入框 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码输入框 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|psw" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码确认框 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|psw|repsw"
+                        placeholder="请再次确认密码" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 登录按钮 -->
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid  layui-btn-normal" lay-submit>立 即 注 册</button>
+                </div>
+                <!-- 注册按钮 -->
+                <div class="layui-form-item link">
+                    <a href="javascript:;" id="link_login">去 登 录</a>
+                </div>
+            </form>
+        </div>
+        <script src="/assets/lib/layui/layui.all.js"></script>
+        <script src="/assets/lib/jquery.js"></script>
+        <script src="/assets/js/login1.js"></script>
 </body>
+
 </html>
