--- a/D-login.html
+++ b/D-login.html
@@ -7,7 +7,7 @@
     <title>大事件</title>
     <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
     <link rel="stylesheet" href="/assets/css/login1.css">
-    <link rel="shortcut icon" href="/assets/images/bitbug_favicon.ico"> 
+    <link rel="shortcut icon" href="/assets/images/bitbug_favicon.ico">
 </head>
 
 <body>
@@ -76,6 +76,7 @@
         </div>
         <script src="/assets/lib/layui/layui.all.js"></script>
         <script src="/assets/lib/jquery.js"></script>
+        <script src="/assets/js/baseAPI1.js"></script>
         <script src="/assets/js/login1.js"></script>
 </body>
 
