--- a/user/user_avaterImg.html
+++ b/user/user_avaterImg.html
@@ -40,7 +40,7 @@
         <!-- accept可以限制选择文件的类型 -->
         <input type="file" id="btnImg" accept="image/png,image/jpeg">
         <button type="button" class="layui-btn" id="btnChooseImage">上传</button>
-        <button type="button" class="layui-btn layui-btn-danger" id="btnUpload">确定</button>
+        <button type="button" class="layui-btn layui-btn-danger" id='btnUpload'>确定</button>
       </div>
     </div>
   </div>
